[package]
name = "mcpat"
version = "0.5.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/simulated-reality/mcpat"
homepage = "https://github.com/simulated-reality/mcpat"
documentation = "https://simulated-reality.github.io/mcpat"
description = "The package provides an interface to McPAT."

[features]
caching = ["mcpat-sys/caching", "hiredis"]

[dependencies]
libc = "*"
mcpat-sys = "*"

[dependencies.hiredis]
version = "*"
optional = true

[dev-dependencies]
fixture = "*"
