[package]
name = "mcpat"
version = "0.8.2"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/mcpat"
homepage = "https://github.com/markov-chain/mcpat"
documentation = "https://markov-chain.github.io/mcpat"
description = "The package provides an interface to McPAT."

[features]
caching = ["mcpat-sys/caching", "hiredis"]

[dependencies]
libc = "*"
mcpat-sys = "*"

[dependencies.hiredis]
version = "*"
optional = true

[dev-dependencies]
fixture = "*"
