[package]
name = "mcpat"
version = "0.9.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an interface to McPAT."
documentation = "https://markov-chain.github.io/mcpat"
homepage = "https://github.com/markov-chain/mcpat"
repository = "https://github.com/markov-chain/mcpat"

[features]
caching = ["mcpat-sys/caching", "hiredis"]

[dependencies]
libc = "0.2"
mcpat-sys = "0.8"

[dependencies.hiredis]
version = "0.3"
optional = true

[dev-dependencies]
fixture = "0.3"
